# card-adoption-analysis

./: .gitignore  README.md  pyproject.toml
notebooks/: 01_validate.ipynb  02_exploration.ipynb  03_q1_unit_economics.ipynb  04_q2_ltv.ipynb  05_q3_markets.ipynb
sql/: 01_clean_transactions.sql  02_cost_lookup.sql  03_profit_per_transaction.sql  04_card_cohort.sql  05_tenure_stats.sql  06_market_scorecard.sql
src/: db.py  ltv.py  markets.py  wise_theme.py
