[project]
name = "card-adoption-analysis"
version = "0.1.0"
description = "Wise Card analysis on profitability, 12-month LTV, and market-level growth analysis."
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.0.0",
    "pandas>=2.2.0",
    "pyarrow>=15.0.0",
    "openpyxl>=3.1.0",
    "matplotlib>=3.8.0",
    "altair>=5.2.0",
    "vl-convert-python>=1.3.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.29.0"
]

[dependency-groups]
dev = [
    "nbstripout>=0.7.0",
]

[tool.uv]
package = false
